versioned_docs/version-1.11/settings/launcher-settings.mdx
---
id: launcher-settings
title: Godot Launcher Settings
slug: /settings
description: "Learn how to configure Godot Launcher using settings for project locations, editor installs, appearance, behavior, code editors, Git, and updates."
tags:
  - getting-started
  - launcher-settings
---

# Godot Launcher Settings {#launcher-settings}

Use **Settings** to choose where projects and editors are stored, change the launcher appearance and behavior, set up development tools, and manage updates.

This page is the settings overview. Each section links to a focused guide with the details for that settings area.

## Choose where new projects are stored {#projects-tab}

The **Projects** tab controls the default folder used for new projects created through Godot Launcher. Existing projects are not moved when this path changes.

[Project Location Settings](./project-location.mdx)

## Choose where Godot editors are stored {#installs-tab}

The **Installs** tab controls where downloaded Godot editors are stored and lets you refresh the release list.

[Editor Install Location Settings](./editor-installs-location.mdx)

## Change appearance and language {#appearance-tab}

The **Appearance** tab controls the launcher theme and interface language. These settings affect Godot Launcher only; they do not change the language of the Godot editor.

[Appearance and Language Settings](./appearance-language.mdx)

## Change launcher behavior {#behavior-tab}

The **Behavior** tab controls confirmation prompts, what happens after launching a project, startup behavior, and optional Windows editor symlink behavior.

[Behavior Settings](./behavior.mdx)

## Set up code editors {#code-editors-tab}

The **Code Editors** tab finds Visual Studio Code and VSCodium. Use it to choose which editors projects can use, set the default for new projects, rescan an installation, or choose an editor's location.

[Code Editor Settings](./code-editors.mdx)

## Check Git {#tools-tab}

The **Tools** tab shows whether Git is available. Godot Launcher uses this check to enable Git initialization in Create Project and Project Settings.

[Git Tool Detection](./tools.mdx)

## Manage launcher updates {#updates-tab}

The **Updates** tab controls background update checks, prerelease updates, manual checks, skipped versions, and update installation prompts.

[Manage Godot Launcher Updates](../updates/manage-launcher-updates.mdx)
